--- a/public/css/prepros.cfg
+++ b/public/css/prepros.cfg
@@ -46,15 +46,15 @@
         "a5dc43a6": {
           "id": "a5dc43a6",
           "path": "front/style.css",
-          "output": "front/style.css",
+          "output": "front/style-dist.css",
           "name": "style.css",
           "category": "CSS",
           "autoCompile": false,
           "sourceMaps": false,
-          "compress": false,
+          "compress": true,
           "cssnext": false,
           "autoprefixer": false,
-          "customOutput": true,
+          "customOutput": false,
           "imported": false,
           "parents": [],
           "type": "css"
@@ -66,7 +66,7 @@
           "name": "style.scss",
           "category": "CSS",
           "autoCompile": true,
-          "autoprefixer": true,
+          "autoprefixer": false,
           "sourceMaps": false,
           "libSass": true,
           "compass": false,
