--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.1.*",
         "laravelcollective/html": "5.1.*",
         "barryvdh/laravel-debugbar": "^2.0",
-        "bestmomo/scafold": "dev-master"
+        "bestmomo/scafold": "dev-master",
+        "unisharp/laravel-ckeditor": "dev-master"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
