MAJ novembre 2015 : pages + mise en avant + vues front

--- a/public/css/back/bootstrap/prepros.cfg
+++ b/public/css/back/bootstrap/prepros.cfg
@@ -6,14 +6,14 @@
     "data": {
       "id": "",
       "cfgVersion": 2,
-      "name": "css",
+      "name": "bootstrap",
       "path": "",
       "files": {
-        "acf4b429": {
-          "id": "acf4b429",
-          "path": "back/style.css",
-          "output": "back/style-dist.css",
-          "name": "style.css",
+        "f6cef623": {
+          "id": "f6cef623",
+          "path": "bootstrap-theme.css",
+          "output": "bootstrap-theme-dist.css",
+          "name": "bootstrap-theme.css",
           "category": "CSS",
           "autoCompile": false,
           "sourceMaps": false,
@@ -25,29 +25,11 @@
           "parents": [],
           "type": "css"
         },
-        "8ab41d88": {
-          "id": "8ab41d88",
-          "path": "back/style.scss",
-          "output": "back/style.css",
-          "name": "style.scss",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
-        },
-        "a5dc43a6": {
-          "id": "a5dc43a6",
-          "path": "front/style.css",
-          "output": "front/style-dist.css",
-          "name": "style.css",
+        "761d3d58": {
+          "id": "761d3d58",
+          "path": "bootstrap.css",
+          "output": "bootstrap-dist.css",
+          "name": "bootstrap.css",
           "category": "CSS",
           "autoCompile": false,
           "sourceMaps": false,
@@ -59,29 +41,11 @@
           "parents": [],
           "type": "css"
         },
-        "c8588cc2": {
-          "id": "c8588cc2",
-          "path": "front/style.scss",
-          "output": "front/style.css",
-          "name": "style.scss",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
-        },
-        "af508aae": {
-          "id": "af508aae",
-          "path": "front/knacss/knacss.css",
-          "output": "front/knacss/knacss-dist.css",
-          "name": "knacss.css",
+        "98cf9fa8": {
+          "id": "98cf9fa8",
+          "path": "my-bootstrap.css",
+          "output": "my-bootstrap-dist.css",
+          "name": "my-bootstrap.css",
           "category": "CSS",
           "autoCompile": false,
           "sourceMaps": false,
@@ -93,90 +57,10 @@
           "parents": [],
           "type": "css"
         },
-        "31d39ba9": {
-          "id": "31d39ba9",
-          "path": "front/sass/base/_base.scss",
-          "output": "front/css/base/_base.css",
-          "name": "_base.scss",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "c8588cc2"
-          ],
-          "type": "sass"
-        },
-        "4184b681": {
-          "id": "4184b681",
-          "path": "front/sass/base/_variables.scss",
-          "output": "front/css/base/_variables.css",
-          "name": "_variables.scss",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "c8588cc2"
-          ],
-          "type": "sass"
-        },
-        "4c39e64f": {
-          "id": "4c39e64f",
-          "path": "front/sass/components/_footer.scss",
-          "output": "front/css/components/_footer.css",
-          "name": "_footer.scss",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "c8588cc2"
-          ],
-          "type": "sass"
-        },
-        "fff229d9": {
-          "id": "fff229d9",
-          "path": "front/sass/components/_header.scss",
-          "output": "front/css/components/_header.css",
-          "name": "_header.scss",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "c8588cc2"
-          ],
-          "type": "sass"
-        },
-        "0a52dc56": {
-          "id": "0a52dc56",
-          "path": "back/bootstrap/bootstrap-theme-min.css",
-          "output": "back/bootstrap/bootstrap-theme-min-dist.css",
+        "93fe0b50": {
+          "id": "93fe0b50",
+          "path": "bootstrap-theme-min.css",
+          "output": "bootstrap-theme-min-dist.css",
           "name": "bootstrap-theme-min.css",
           "category": "CSS",
           "autoCompile": false,
@@ -189,10 +73,10 @@
           "parents": [],
           "type": "css"
         },
-        "c77550e8": {
-          "id": "c77550e8",
-          "path": "back/bootstrap/bootstrap.min.css",
-          "output": "back/bootstrap/bootstrap.min-dist.css",
+        "2e391b3b": {
+          "id": "2e391b3b",
+          "path": "bootstrap.min.css",
+          "output": "bootstrap.min-dist.css",
           "name": "bootstrap.min.css",
           "category": "CSS",
           "autoCompile": false,
