--- a/public/css/front/prepros.cfg
+++ b/public/css/front/prepros.cfg
@@ -6,13 +6,13 @@
     "data": {
       "id": "",
       "cfgVersion": 2,
-      "name": "css",
+      "name": "front",
       "path": "",
       "files": {
-        "acf4b429": {
-          "id": "acf4b429",
-          "path": "back/style.css",
-          "output": "back/style-dist.css",
+        "aa810382": {
+          "id": "aa810382",
+          "path": "style.css",
+          "output": "style-dist.css",
           "name": "style.css",
           "category": "CSS",
           "autoCompile": false,
@@ -25,14 +25,14 @@
           "parents": [],
           "type": "css"
         },
-        "8ab41d88": {
-          "id": "8ab41d88",
-          "path": "back/style.scss",
-          "output": "back/style.css",
+        "a8034bad": {
+          "id": "a8034bad",
+          "path": "style.scss",
+          "output": "style.css",
           "name": "style.scss",
           "category": "CSS",
           "autoCompile": true,
-          "autoprefixer": false,
+          "autoprefixer": true,
           "sourceMaps": false,
           "libSass": true,
           "compass": false,
@@ -43,44 +43,10 @@
           "parents": [],
           "type": "sass"
         },
-        "a5dc43a6": {
-          "id": "a5dc43a6",
-          "path": "front/style.css",
-          "output": "front/style-dist.css",
-          "name": "style.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
-        },
-        "c8588cc2": {
-          "id": "c8588cc2",
-          "path": "front/style.scss",
-          "output": "front/style.css",
-          "name": "style.scss",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
-        },
-        "af508aae": {
-          "id": "af508aae",
-          "path": "front/knacss/knacss.css",
-          "output": "front/knacss/knacss-dist.css",
+        "b68edf3e": {
+          "id": "b68edf3e",
+          "path": "knacss/knacss.css",
+          "output": "knacss/knacss-dist.css",
           "name": "knacss.css",
           "category": "CSS",
           "autoCompile": false,
@@ -93,10 +59,10 @@
           "parents": [],
           "type": "css"
         },
-        "31d39ba9": {
-          "id": "31d39ba9",
-          "path": "front/sass/base/_base.scss",
-          "output": "front/css/base/_base.css",
+        "5caa306b": {
+          "id": "5caa306b",
+          "path": "sass/base/_base.scss",
+          "output": "css/base/_base.css",
           "name": "_base.scss",
           "category": "CSS",
           "autoCompile": false,
@@ -109,14 +75,14 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "c8588cc2"
+            "a8034bad"
           ],
           "type": "sass"
         },
-        "4184b681": {
-          "id": "4184b681",
-          "path": "front/sass/base/_variables.scss",
-          "output": "front/css/base/_variables.css",
+        "464039e7": {
+          "id": "464039e7",
+          "path": "sass/base/_variables.scss",
+          "output": "css/base/_variables.css",
           "name": "_variables.scss",
           "category": "CSS",
           "autoCompile": false,
@@ -129,14 +95,14 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "c8588cc2"
+            "a8034bad"
           ],
           "type": "sass"
         },
-        "4c39e64f": {
-          "id": "4c39e64f",
-          "path": "front/sass/components/_footer.scss",
-          "output": "front/css/components/_footer.css",
+        "9277c331": {
+          "id": "9277c331",
+          "path": "sass/components/_footer.scss",
+          "output": "css/components/_footer.css",
           "name": "_footer.scss",
           "category": "CSS",
           "autoCompile": false,
@@ -149,14 +115,14 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "c8588cc2"
+            "a8034bad"
           ],
           "type": "sass"
         },
-        "fff229d9": {
-          "id": "fff229d9",
-          "path": "front/sass/components/_header.scss",
-          "output": "front/css/components/_header.css",
+        "4ab71597": {
+          "id": "4ab71597",
+          "path": "sass/components/_header.scss",
+          "output": "css/components/_header.css",
           "name": "_header.scss",
           "category": "CSS",
           "autoCompile": false,
@@ -169,46 +135,14 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "c8588cc2"
+            "a8034bad"
           ],
           "type": "sass"
         },
-        "0a52dc56": {
-          "id": "0a52dc56",
-          "path": "back/bootstrap/bootstrap-theme-min.css",
-          "output": "back/bootstrap/bootstrap-theme-min-dist.css",
-          "name": "bootstrap-theme-min.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
-        },
-        "c77550e8": {
-          "id": "c77550e8",
-          "path": "back/bootstrap/bootstrap.min.css",
-          "output": "back/bootstrap/bootstrap.min-dist.css",
-          "name": "bootstrap.min.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
-        },
-        "d1117107": {
-          "id": "d1117107",
-          "path": "front/sass/components/_sidebar.scss",
-          "output": "front/css/components/_sidebar.css",
+        "d0e511f3": {
+          "id": "d0e511f3",
+          "path": "sass/components/_sidebar.scss",
+          "output": "css/components/_sidebar.css",
           "name": "_sidebar.scss",
           "category": "CSS",
           "autoCompile": false,
@@ -221,14 +155,14 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "c8588cc2"
+            "a8034bad"
           ],
           "type": "sass"
         },
-        "eaad1ba7": {
-          "id": "eaad1ba7",
-          "path": "front/sass/layout/_post.scss",
-          "output": "front/css/layout/_post.css",
+        "7c4a9c56": {
+          "id": "7c4a9c56",
+          "path": "sass/layout/_post.scss",
+          "output": "css/layout/_post.css",
           "name": "_post.scss",
           "category": "CSS",
           "autoCompile": false,
@@ -241,7 +175,7 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "c8588cc2"
+            "a8034bad"
           ],
           "type": "sass"
         }
