--- a/public/css/front/prepros.cfg
+++ b/public/css/front/prepros.cfg
@@ -178,6 +178,54 @@
             "a8034bad"
           ],
           "type": "sass"
+        },
+        "5822ed5b": {
+          "id": "5822ed5b",
+          "path": "fancybox/jquery.fancybox-buttons.css",
+          "output": "fancybox/jquery.fancybox-buttons-dist.css",
+          "name": "jquery.fancybox-buttons.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "b55fab15": {
+          "id": "b55fab15",
+          "path": "fancybox/jquery.fancybox-thumbs.css",
+          "output": "fancybox/jquery.fancybox-thumbs-dist.css",
+          "name": "jquery.fancybox-thumbs.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "13b9d252": {
+          "id": "13b9d252",
+          "path": "fancybox/jquery.fancybox.css",
+          "output": "fancybox/jquery.fancybox-dist.css",
+          "name": "jquery.fancybox.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
         }
       },
       "deploymentHistory": {},
