--- a/public/css/prepros.cfg
+++ b/public/css/prepros.cfg
@@ -244,6 +244,54 @@
             "c8588cc2"
           ],
           "type": "sass"
+        },
+        "289eac0b": {
+          "id": "289eac0b",
+          "path": "front/fancybox/jquery.fancybox-buttons.css",
+          "output": "front/fancybox/jquery.fancybox-buttons-dist.css",
+          "name": "jquery.fancybox-buttons.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "21e923e7": {
+          "id": "21e923e7",
+          "path": "front/fancybox/jquery.fancybox-thumbs.css",
+          "output": "front/fancybox/jquery.fancybox-thumbs-dist.css",
+          "name": "jquery.fancybox-thumbs.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "cd76a655": {
+          "id": "cd76a655",
+          "path": "front/fancybox/jquery.fancybox.css",
+          "output": "front/fancybox/jquery.fancybox-dist.css",
+          "name": "jquery.fancybox.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
         }
       },
       "deploymentHistory": {},
